Fix search overflow x issue

--- a/client/stylesheets/templates/_morphSearch.less
+++ b/client/stylesheets/templates/_morphSearch.less
@@ -218,6 +218,7 @@ input[type="search"] { /* reset normalize */
 	pointer-events: none;
 	opacity: 0;
 	list-style: none;
+	overflow-x: hidden;
 }
 
 .morphsearch.open .morphsearch-content {
